[gd_scene load_steps=7 format=3 uid="uid://be3pykxu8ypp0"]

[ext_resource type="Script" uid="uid://7vmae48fo5fn" path="res://scenes/interface.gd" id="1_beetn"]
[ext_resource type="PackedScene" uid="uid://e06rw76b7gcq" path="res://scenes/hourglass.tscn" id="1_fiocc"]
[ext_resource type="PackedScene" uid="uid://dbjso2gpx2oq3" path="res://scenes/chimes.tscn" id="3_ajs2v"]
[ext_resource type="Shader" uid="uid://symutan5hon4" path="res://scenes/hue_shift.tres" id="3_s0di0"]

[sub_resource type="LabelSettings" id="LabelSettings_fiocc"]
font_size = 48
font_color = Color(0, 1, 0.666667, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uidac"]
shader = ExtResource("3_s0di0")

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_beetn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0289581, 0.306615, 0.31412, 1)
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 16
columns = 3

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Hours"

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Minutes"

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Seconds"

[node name="TextEditHours" type="TextEdit" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "0"
placeholder_text = "Hours"
emoji_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="TextEditMinutes" type="TextEdit" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "0"
placeholder_text = "Minutes"
emoji_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="TextEditSeconds" type="TextEdit" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
text = "0"
placeholder_text = "Seconds"
emoji_menu_enabled = false
middle_mouse_paste_enabled = false

[node name="ButtonFlip" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Start"

[node name="ButtonReset" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Reset"

[node name="ButtonAcknowledge" type="Button" parent="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
text = "Acknowledged!"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LabelRemainingTime" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00:00"
label_settings = SubResource("LabelSettings_fiocc")
horizontal_alignment = 1

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(450, 450)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/Control/CenterContainer"]
layout_mode = 2

[node name="Hourglass" parent="MarginContainer/HBoxContainer/VBoxContainer2/Control/CenterContainer/Control" instance=ExtResource("1_fiocc")]
unique_name_in_owner = true
scale = Vector2(0.5, 0.5)

[node name="HueFilter" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_uidac")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="Chimes" parent="." instance=ExtResource("3_ajs2v")]
unique_name_in_owner = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonFlip" to="." method="_on_button_flip_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonReset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/ButtonAcknowledge" to="." method="_on_button_acknowledge_pressed"]
